[gd_scene load_steps=17 format=3 uid="uid://c50c02u5wnybo"]

[ext_resource type="PackedScene" uid="uid://d8cx8wbn22yw" path="res://Player.tscn" id="1_lk5ld"]
[ext_resource type="Script" path="res://base.gd" id="1_va5gk"]
[ext_resource type="TileSet" uid="uid://bpakx3jebth74" path="res://Basic Tileset.tres" id="2_f6k27"]
[ext_resource type="Texture2D" uid="uid://decfrlmwb3suo" path="res://Art/Ring2.png" id="3_qajak"]
[ext_resource type="AudioStream" uid="uid://dqh78j1vub3x5" path="res://Art/synth3.wav" id="4_xypln"]
[ext_resource type="AudioStream" uid="uid://bhba8lsq84c5w" path="res://Art/synth4.wav" id="5_k3q55"]
[ext_resource type="PackedScene" uid="uid://bcwfo030obojh" path="res://hud.tscn" id="6_uy1jr"]
[ext_resource type="Script" path="res://BuffNode.gd" id="7_btp5n"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_qv3tf"]
vertices = PackedVector2Array(515, 335, 14, 331, 14, 20, 515, 18)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(4, 11, 526, 8, 525, 346, 5, 341)])
source_geometry_group_name = &"navigation_polygon_source_group"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sqm0n"]
size = Vector2(501, 307)

[sub_resource type="Animation" id="Animation_pocsj"]
resource_name = "Merge1"
length = 1.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.192, 0.36, 0.576, 0.768, 0.96),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_8ba4o"]
resource_name = "Merge2"
length = 1.06
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.18, 0.36, 0.54, 0.72, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_2d0hi"]
resource_name = "Separation1"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16, 0.32, 0.48, 0.64, 0.8, 0.96, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_v370b"]
resource_name = "Separation2"
length = 0.95
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [7, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_re437"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a2tbn"]
_data = {
"Merge1": SubResource("Animation_pocsj"),
"Merge2": SubResource("Animation_8ba4o"),
"Separation1": SubResource("Animation_2d0hi"),
"Separation2": SubResource("Animation_v370b"),
"idle": SubResource("Animation_re437")
}

[node name="Base" type="Node2D"]
script = ExtResource("1_va5gk")

[node name="TileMap" type="TileMap" parent="." groups=["wall"]]
z_index = -1
tile_set = ExtResource("2_f6k27")
format = 2
layer_0/name = "Base"
layer_0/tile_data = PackedInt32Array(196614, 131072, 9, 196615, 131072, 9, 196616, 131072, 9, 196617, 131072, 9, 196618, 131072, 9, 196619, 131072, 9, 196620, 131072, 9, 196621, 131072, 9, 196622, 131072, 9, 196623, 131072, 9, 196624, 131072, 9, 262160, 131072, 9, 262159, 131072, 9, 262158, 131072, 9, 262157, 131072, 9, 262156, 131072, 9, 262155, 1638400, 12, 262154, 1638400, 12, 262153, 131072, 9, 262152, 131072, 9, 262151, 131072, 9, 262150, 131072, 9, 0, 65536, 7, 1, 131072, 7, 65536, 65536, 8, 131071, 0, 8, 196607, 0, 9, 131072, 65536, 9, 65537, 131072, 8, 131073, 131072, 9, 2, 196608, 7, 65538, 131072, 8, 131074, 131072, 9, 65539, 131072, 8, 65540, 131072, 8, 65541, 131072, 8, 65542, 131072, 8, 3, 131072, 7, 4, 131072, 7, 5, 131072, 7, 6, 131072, 7, 7, 131072, 7, 65543, 131072, 8, 8, 131072, 7, 65544, 131072, 8, 9, 131072, 7, 65545, 131072, 8, 10, 131072, 7, 65546, 131072, 8, 11, 131072, 7, 65547, 131072, 8, 12, 131072, 7, 65548, 131072, 8, 13, 131072, 7, 65549, 131072, 8, 14, 131072, 7, 65550, 131072, 8, 15, 131072, 7, 65551, 131072, 8, 16, 131072, 7, 65552, 131072, 8, 17, 131072, 7, 65553, 131072, 8, 18, 131072, 7, 65554, 131072, 8, 19, 131072, 7, 65555, 131072, 8, 20, 131072, 7, 65556, 131072, 8, 21, 131072, 7, 65557, 131072, 8, 22, 131072, 7, 65558, 131072, 8, 23, 131072, 7, 65559, 131072, 8, 24, 131072, 7, 65560, 131072, 8, 25, 131072, 7, 65561, 131072, 8, 26, 131072, 7, 65562, 131072, 8, 27, 131072, 7, 65563, 131072, 8, 28, 131072, 7, 65564, 131072, 8, 29, 131072, 7, 65565, 131072, 8, 30, 131072, 7, 65566, 131072, 8, 262143, 0, 9, 196608, 65536, 9, 327679, 0, 9, 262144, 65536, 9, 393215, 0, 9, 327680, 65536, 9, 458751, 0, 9, 393216, 65536, 9, 524287, 0, 9, 458752, 65536, 9, 589823, 0, 9, 524288, 65536, 9, 655359, 0, 9, 589824, 65536, 9, 720895, 0, 9, 655360, 65536, 9, 786431, 0, 9, 720896, 65536, 9, 851967, 0, 9, 786432, 65536, 9, 917503, 0, 9, 851968, 65536, 9, 983039, 0, 9, 917504, 65536, 9, 1048575, 0, 9, 983040, 65536, 9, 1114111, 0, 9, 1048576, 65536, 9, 1179647, 0, 9, 1114112, 65536, 9, 1245183, 0, 9, 1179648, 65536, 9, 1310719, 0, 9, 1245184, 65536, 9, 1376255, 0, 9, 1310720, 65536, 9, 1441791, 0, 10, 1376256, 65536, 10, 1376257, 131072, 10, 1507327, 0, 11, 1572863, 0, 12, 1441792, 65536, 11, 1507328, 65536, 12, 1441793, 131072, 11, 1507329, 131072, 12, 1376258, 131072, 10, 1376259, 131072, 10, 1376260, 131072, 10, 1376261, 131072, 10, 1376262, 131072, 10, 1376263, 131072, 10, 1376264, 131072, 10, 1376265, 131072, 10, 1376266, 131072, 10, 1376267, 131072, 10, 1376268, 131072, 10, 1376269, 131072, 10, 1376270, 131072, 10, 1376271, 131072, 10, 1376272, 131072, 10, 1376273, 131072, 10, 1376274, 131072, 10, 1376275, 131072, 10, 1376276, 131072, 10, 1441794, 131072, 11, 1507330, 131072, 12, 1441795, 131072, 11, 1507331, 131072, 12, 1441796, 131072, 11, 1507332, 131072, 12, 1441797, 131072, 11, 1507333, 131072, 12, 1441798, 131072, 11, 1507334, 131072, 12, 1441799, 131072, 11, 1507335, 131072, 12, 1441800, 131072, 11, 1507336, 131072, 12, 1441801, 131072, 11, 1507337, 131072, 12, 1441802, 131072, 11, 1507338, 131072, 12, 1441803, 131072, 11, 1507339, 131072, 12, 1441804, 131072, 11, 1507340, 131072, 12, 1441805, 131072, 11, 1507341, 131072, 12, 1441806, 131072, 11, 1507342, 131072, 12, 1441807, 131072, 11, 1507343, 131072, 12, 1441808, 131072, 11, 1507344, 131072, 12, 1441809, 131072, 11, 1507345, 131072, 12, 1441810, 131072, 11, 1507346, 131072, 12, 1441811, 131072, 11, 1507347, 131072, 12, 1441812, 131072, 11, 1507348, 131072, 12, 1376277, 131072, 10, 1441813, 131072, 11, 1507349, 131072, 12, 1376278, 131072, 10, 1441814, 131072, 11, 1507350, 131072, 12, 1376279, 131072, 10, 1441815, 131072, 11, 1507351, 131072, 12, 1376280, 131072, 10, 1441816, 131072, 11, 1507352, 131072, 12, 1376281, 131072, 10, 1441817, 131072, 11, 1507353, 131072, 12, 1376282, 131072, 10, 1441818, 131072, 11, 1507354, 131072, 12, 1376283, 131072, 10, 1441819, 131072, 11, 1507355, 131072, 12, 1376284, 131072, 10, 1441820, 131072, 11, 1507356, 131072, 12, 1376285, 131072, 10, 1441821, 131072, 11, 1507357, 131072, 12, 1376286, 131072, 10, 1441822, 131072, 11, 1507358, 131072, 12, 1376287, 131072, 10, 1441823, 131072, 11, 1507359, 131072, 12, 1376288, 196608, 10, 1441824, 196608, 11, 1507360, 196608, 12, 1376289, 262144, 10, 1441825, 262144, 11, 1507361, 262144, 12, 1310752, 196608, 9, 1310753, 262144, 9, 1245216, 196608, 9, 1245217, 262144, 9, 1179680, 196608, 9, 1179681, 262144, 9, 1114144, 196608, 9, 1114145, 262144, 9, 1048608, 196608, 9, 1048609, 262144, 9, 983072, 196608, 9, 983073, 262144, 9, 917536, 196608, 9, 917537, 262144, 9, 852000, 196608, 9, 852001, 262144, 9, 786464, 196608, 9, 786465, 262144, 9, 720928, 196608, 9, 720929, 262144, 9, 655392, 196608, 9, 655393, 262144, 9, 589856, 196608, 9, 589857, 262144, 9, 524320, 196608, 9, 524321, 262144, 9, 458784, 196608, 9, 458785, 262144, 9, 393248, 196608, 9, 393249, 262144, 9, 327712, 196608, 9, 327713, 262144, 9, 262176, 196608, 9, 262177, 262144, 9, 196640, 196608, 9, 196641, 262144, 9, 131104, 196608, 9, 131105, 262144, 9, 32, 196608, 7, 65568, 196608, 8, 65569, 262144, 8, 31, 131072, 7, 65567, 131072, 8, 196609, 131072, 9, 196610, 131072, 9, 262146, 131072, 9, 262147, 131072, 9, 327683, 131072, 9, 327684, 131072, 9, 393220, 131072, 9, 393221, 131072, 9, 458757, 131072, 9, 458758, 131072, 9, 524294, 131072, 9, 589830, 131072, 9, 589843, 131072, 9, 524307, 131072, 9, 458771, 131072, 9, 393235, 131072, 9, 327699, 131072, 9, 262163, 131072, 9, 196627, 131072, 9, 131091, 131072, 9, 131090, 131072, 9, 131089, 131072, 9, 131088, 131072, 9, 131087, 131072, 9, 131086, 131072, 9, 131085, 131072, 9, 131084, 131072, 9, 131083, 131072, 9, 131082, 131072, 9, 131081, 131072, 9, 131080, 131072, 9, 131079, 131072, 9, 131078, 131072, 9, 131077, 131072, 9, 131076, 131072, 9, 131075, 131072, 9, 196611, 131072, 9, 196612, 131072, 9, 262148, 131072, 9, 262149, 131072, 9, 196613, 131072, 9, 327685, 131072, 9, 327686, 131072, 9, 393222, 131072, 9, 393223, 131072, 9, 327687, 131072, 9, 327688, 131072, 9, 393224, 131072, 9, 458760, 131072, 9, 458759, 131072, 9, 524295, 131072, 9, 589831, 131072, 9, 655367, 131072, 9, 655366, 131072, 9, 655365, 131072, 9, 589829, 131072, 9, 524293, 131072, 9, 524292, 131072, 9, 458756, 131072, 9, 458755, 131072, 9, 393219, 131072, 9, 393218, 131072, 9, 327682, 131072, 9, 327681, 131072, 9, 262145, 131072, 9, 393217, 131072, 9, 458753, 131072, 9, 524289, 131072, 9, 589825, 131072, 9, 655361, 131072, 9, 720897, 131072, 9, 786433, 131072, 9, 851969, 131072, 9, 917505, 131072, 9, 983041, 131072, 9, 1048577, 131072, 9, 1114113, 131072, 9, 1179649, 131072, 9, 1245185, 131072, 9, 1310721, 131072, 9, 1310722, 131072, 9, 1245186, 131072, 9, 1179650, 131072, 9, 1114114, 131072, 9, 1048578, 131072, 9, 983042, 131072, 9, 917506, 131072, 9, 851970, 131072, 9, 786434, 131072, 9, 720898, 131072, 9, 655362, 131072, 9, 589826, 131072, 9, 524290, 131072, 9, 458754, 131072, 9, 524291, 131072, 9, 589827, 131072, 9, 655363, 131072, 9, 720899, 131072, 9, 786435, 131072, 9, 851971, 131072, 9, 917507, 131072, 9, 983043, 131072, 9, 1048579, 131072, 9, 1114115, 131072, 9, 1179651, 131072, 9, 1245187, 131072, 9, 1310723, 131072, 9, 1310724, 131072, 9, 1245188, 131072, 9, 1179652, 131072, 9, 1114116, 131072, 9, 1048580, 131072, 9, 983044, 131072, 9, 917508, 131072, 9, 851972, 131072, 9, 786436, 131072, 9, 720900, 131072, 9, 655364, 131072, 9, 589828, 131072, 9, 720901, 131072, 9, 786437, 131072, 9, 851973, 131072, 9, 917509, 131072, 9, 983045, 131072, 9, 1048581, 131072, 9, 1114117, 131072, 9, 1179653, 131072, 9, 1245189, 131072, 9, 1310725, 131072, 9, 1310726, 131072, 9, 1245190, 131072, 9, 1179654, 131072, 9, 1114118, 1638400, 12, 1048582, 1638400, 12, 983046, 131072, 9, 917510, 131072, 9, 851974, 131072, 9, 786438, 131072, 9, 720902, 131072, 9, 720903, 131072, 9, 786439, 131072, 9, 851975, 131072, 9, 917511, 131072, 9, 983047, 131072, 9, 1048583, 1638400, 12, 1114119, 1638400, 12, 1179655, 131072, 9, 1245191, 131072, 9, 1310727, 131072, 9, 1310728, 131072, 9, 1245192, 131072, 9, 1179656, 131072, 9, 1114120, 131072, 9, 1048584, 131072, 9, 983048, 131072, 9, 917512, 131072, 9, 851976, 131072, 9, 786440, 131072, 9, 720904, 131072, 9, 655368, 131072, 9, 589832, 131072, 9, 524296, 131072, 9, 524297, 131072, 9, 458761, 131072, 9, 393225, 131072, 9, 327689, 131072, 9, 327690, 1638400, 12, 393226, 131072, 9, 458762, 131072, 9, 524298, 131072, 9, 589834, 131072, 9, 589833, 131072, 9, 655369, 131072, 9, 720905, 131072, 9, 786441, 131072, 9, 851977, 131072, 9, 917513, 131072, 9, 983049, 131072, 9, 1048585, 131072, 9, 1114121, 131072, 9, 1179657, 131072, 9, 1245193, 131072, 9, 1310729, 131072, 9, 1310730, 131072, 9, 1245194, 131072, 9, 1179658, 131072, 9, 1114122, 131072, 9, 1048586, 131072, 9, 983050, 131072, 9, 917514, 131072, 9, 851978, 131072, 9, 786442, 131072, 9, 720906, 131072, 9, 655370, 131072, 9, 655371, 131072, 9, 589835, 131072, 9, 524299, 131072, 9, 458763, 131072, 9, 393227, 131072, 9, 327691, 1638400, 12, 327692, 131072, 9, 393228, 131072, 9, 458764, 131072, 9, 524300, 131072, 9, 589836, 131072, 9, 655372, 131072, 9, 720908, 131072, 9, 720907, 131072, 9, 786443, 131072, 9, 851979, 131072, 9, 917515, 131072, 9, 983051, 131072, 9, 1048587, 131072, 9, 1114123, 131072, 9, 1179659, 131072, 9, 1245195, 131072, 9, 1310731, 131072, 9, 1310732, 131072, 9, 1245196, 131072, 9, 1179660, 131072, 9, 1114124, 131072, 9, 1048588, 131072, 9, 983052, 131072, 9, 917516, 131072, 9, 851980, 131072, 9, 786444, 131072, 9, 786445, 131072, 9, 720909, 131072, 9, 655373, 131072, 9, 589837, 131072, 9, 524301, 131072, 9, 458765, 131072, 9, 393229, 131072, 9, 327693, 131072, 9, 327694, 131072, 9, 393230, 131072, 9, 458766, 131072, 9, 524302, 131072, 9, 589838, 131072, 9, 655374, 131072, 9, 720910, 131072, 9, 786446, 131072, 9, 851982, 131072, 9, 851981, 131072, 9, 917517, 131072, 9, 983053, 131072, 9, 1048589, 131072, 9, 1114125, 131072, 9, 1179661, 131072, 9, 1245197, 131072, 9, 1310733, 131072, 9, 1310734, 131072, 9, 1245198, 131072, 9, 1179662, 131072, 9, 1114126, 131072, 9, 1048590, 131072, 9, 983054, 131072, 9, 917518, 131072, 9, 917519, 131072, 9, 851983, 131072, 9, 786447, 131072, 9, 720911, 131072, 9, 655375, 131072, 9, 589839, 131072, 9, 524303, 131072, 9, 458767, 131072, 9, 393231, 131072, 9, 327695, 131072, 9, 327696, 131072, 9, 393232, 131072, 9, 458768, 131072, 9, 524304, 131072, 9, 589840, 131072, 9, 655376, 131072, 9, 720912, 131072, 9, 786448, 131072, 9, 851984, 131072, 9, 917520, 131072, 9, 983056, 131072, 9, 983055, 131072, 9, 1048591, 131072, 9, 1114127, 131072, 9, 1179663, 131072, 9, 1245199, 131072, 9, 1310735, 131072, 9, 1310736, 131072, 9, 1245200, 131072, 9, 1179664, 131072, 9, 1114128, 131072, 9, 1048592, 131072, 9, 1048593, 131072, 9, 983057, 131072, 9, 917521, 131072, 9, 851985, 131072, 9, 786449, 131072, 9, 720913, 131072, 9, 655377, 131072, 9, 589841, 131072, 9, 524305, 131072, 9, 458769, 131072, 9, 393233, 131072, 9, 327697, 131072, 9, 262161, 131072, 9, 196625, 131072, 9, 196626, 131072, 9, 262162, 131072, 9, 327698, 131072, 9, 393234, 131072, 9, 458770, 131072, 9, 524306, 131072, 9, 589842, 131072, 9, 655378, 131072, 9, 720914, 131072, 9, 786450, 131072, 9, 851986, 131072, 9, 917522, 131072, 9, 983058, 131072, 9, 1048594, 131072, 9, 1114130, 131072, 9, 1114129, 131072, 9, 1179665, 131072, 9, 1245201, 131072, 9, 1310737, 131072, 9, 1310738, 131072, 9, 1245202, 131072, 9, 1179666, 131072, 9, 1179667, 131072, 9, 1114131, 131072, 9, 1048595, 131072, 9, 983059, 131072, 9, 917523, 131072, 9, 851987, 131072, 9, 786451, 131072, 9, 720915, 131072, 9, 655379, 131072, 9, 655380, 131072, 9, 589844, 131072, 9, 524308, 131072, 9, 458772, 131072, 9, 393236, 131072, 9, 327700, 131072, 9, 262164, 131072, 9, 196628, 131072, 9, 131092, 131072, 9, 131093, 131072, 9, 196629, 131072, 9, 262165, 131072, 9, 327701, 131072, 9, 393237, 131072, 9, 458773, 131072, 9, 524309, 131072, 9, 589845, 131072, 9, 655381, 131072, 9, 720917, 131072, 9, 720916, 131072, 9, 786452, 131072, 9, 851988, 131072, 9, 917524, 131072, 9, 983060, 131072, 9, 1048596, 131072, 9, 1114132, 131072, 9, 1179668, 131072, 9, 1245204, 131072, 9, 1245203, 131072, 9, 1310739, 131072, 9, 1310740, 131072, 9, 1310741, 131072, 9, 1245205, 131072, 9, 1179669, 131072, 9, 1114133, 131072, 9, 1048597, 131072, 9, 983061, 131072, 9, 917525, 131072, 9, 851989, 131072, 9, 786453, 131072, 9, 786454, 131072, 9, 720918, 131072, 9, 655382, 131072, 9, 589846, 131072, 9, 524310, 131072, 9, 458774, 131072, 9, 393238, 131072, 9, 327702, 131072, 9, 262166, 131072, 9, 196630, 131072, 9, 131094, 131072, 9, 131095, 131072, 9, 196631, 131072, 9, 262167, 131072, 9, 327703, 131072, 9, 393239, 131072, 9, 458775, 131072, 9, 524311, 131072, 9, 589847, 131072, 9, 655383, 131072, 9, 720919, 131072, 9, 786455, 131072, 9, 851991, 131072, 9, 851990, 131072, 9, 917526, 131072, 9, 983062, 131072, 9, 1048598, 131072, 9, 1114134, 131072, 9, 1179670, 131072, 9, 1245206, 131072, 9, 1310742, 131072, 9, 1310743, 131072, 9, 1245207, 131072, 9, 1179671, 131072, 9, 1114135, 131072, 9, 1048599, 131072, 9, 983063, 131072, 9, 917527, 131072, 9, 917528, 131072, 9, 851992, 131072, 9, 786456, 131072, 9, 720920, 131072, 9, 655384, 131072, 9, 589848, 131072, 9, 524312, 131072, 9, 458776, 131072, 9, 393240, 131072, 9, 327704, 131072, 9, 262168, 131072, 9, 196632, 131072, 9, 131096, 131072, 9, 131097, 131072, 9, 196633, 131072, 9, 262169, 131072, 9, 327705, 131072, 9, 393241, 131072, 9, 458777, 131072, 9, 524313, 131072, 9, 589849, 131072, 9, 655385, 131072, 9, 720921, 131072, 9, 786457, 131072, 9, 851993, 131072, 9, 917529, 131072, 9, 983065, 131072, 9, 983064, 131072, 9, 1048600, 131072, 9, 1114136, 131072, 9, 1179672, 131072, 9, 1245208, 131072, 9, 1310744, 131072, 9, 1310745, 131072, 9, 1245209, 131072, 9, 1179673, 131072, 9, 1114137, 131072, 9, 1048601, 131072, 9, 1048602, 131072, 9, 983066, 1638400, 12, 917530, 1638400, 12, 851994, 1638400, 12, 786458, 131072, 9, 720922, 131072, 9, 655386, 131072, 9, 589850, 131072, 9, 524314, 131072, 9, 458778, 131072, 9, 393242, 131072, 9, 327706, 131072, 9, 262170, 131072, 9, 196634, 131072, 9, 131098, 131072, 9, 131099, 131072, 9, 196635, 131072, 9, 262171, 131072, 9, 327707, 131072, 9, 393243, 131072, 9, 458779, 131072, 9, 524315, 131072, 9, 589851, 131072, 9, 655387, 131072, 9, 720923, 131072, 9, 786459, 131072, 9, 851995, 1638400, 12, 917531, 1638400, 12, 983067, 1638400, 12, 1048603, 131072, 9, 1114139, 131072, 9, 1114138, 131072, 9, 1179674, 131072, 9, 1245210, 131072, 9, 1310746, 131072, 9, 1310747, 131072, 9, 1245211, 131072, 9, 1179675, 131072, 9, 1179676, 131072, 9, 1114140, 131072, 9, 1048604, 131072, 9, 983068, 131072, 9, 917532, 131072, 9, 851996, 131072, 9, 786460, 131072, 9, 720924, 131072, 9, 655388, 131072, 9, 589852, 131072, 9, 524316, 131072, 9, 458780, 131072, 9, 393244, 131072, 9, 327708, 131072, 9, 262172, 131072, 9, 196636, 131072, 9, 131100, 131072, 9, 131101, 131072, 9, 196637, 131072, 9, 262173, 131072, 9, 327709, 131072, 9, 393245, 131072, 9, 458781, 131072, 9, 524317, 131072, 9, 589853, 131072, 9, 655389, 131072, 9, 720925, 131072, 9, 786461, 131072, 9, 851997, 131072, 9, 917533, 131072, 9, 983069, 131072, 9, 1048605, 131072, 9, 1114141, 131072, 9, 1179677, 131072, 9, 1245213, 131072, 9, 1245212, 131072, 9, 1310748, 131072, 9, 1310749, 131072, 9, 1310750, 131072, 9, 1245214, 131072, 9, 1179678, 131072, 9, 1114142, 131072, 9, 1048606, 131072, 9, 983070, 131072, 9, 917534, 131072, 9, 851998, 131072, 9, 786462, 131072, 9, 720926, 131072, 9, 655390, 131072, 9, 589854, 131072, 9, 524318, 131072, 9, 458782, 131072, 9, 393246, 131072, 9, 327710, 131072, 9, 262174, 131072, 9, 196638, 131072, 9, 131102, 131072, 9, 131103, 131072, 9, 196639, 131072, 9, 262175, 131072, 9, 327711, 131072, 9, 393247, 131072, 9, 458783, 131072, 9, 524319, 131072, 9, 589855, 131072, 9, 655391, 131072, 9, 720927, 131072, 9, 786463, 131072, 9, 851999, 131072, 9, 917535, 131072, 9, 983071, 131072, 9, 1048607, 131072, 9, 1114143, 131072, 9, 1179679, 131072, 9, 1245215, 131072, 9, 1310751, 131072, 9)
layer_1/name = "Upper"
layer_1/z_index = 2
layer_1/tile_data = PackedInt32Array(983047, 1769472, 11, 1048583, 1769472, 12, 1114119, 1769472, 13, 983048, 1835008, 11, 1048584, 1835008, 12, 1114120, 1835008, 13, 851994, 1769472, 11, 917530, 1769472, 12, 983066, 1769472, 13, 851995, 1835008, 11, 917531, 1835008, 12, 983067, 1835008, 13, 1179667, 1769472, 11, 1245203, 1769472, 12, 1310739, 1769472, 13, 1179668, 1835008, 11, 1245204, 1835008, 12, 1310740, 1835008, 13, 196619, 1769472, 11, 262155, 1769472, 12, 327691, 1769472, 13, 196620, 1835008, 11, 262156, 1835008, 12, 327692, 1835008, 13, 131073, 1769472, 11, 196609, 1769472, 12, 262145, 1769472, 13, 131074, 1835008, 11, 196610, 1835008, 12, 262146, 1835008, 13, -65509, 1769472, 11, 27, 1769472, 12, 65563, 1769472, 13, -65508, 1835008, 11, 28, 1835008, 12, 65564, 1835008, 13, 327702, 1769472, 11, 393238, 1769472, 12, 458774, 1769472, 13, 327703, 1835008, 11, 393239, 1835008, 12, 458775, 1835008, 13)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_qv3tf")

[node name="NavRegionArea" type="Area2D" parent="NavigationRegion2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NavigationRegion2D/NavRegionArea"]
position = Vector2(264.5, 173.5)
shape = SubResource("RectangleShape2D_sqm0n")

[node name="Player" parent="." instance=ExtResource("1_lk5ld")]
position = Vector2(278, 197)

[node name="Alchemy_timer" type="Timer" parent="Player"]
wait_time = 4.0

[node name="Alchemy_windup" type="Timer" parent="Player"]
wait_time = 1.1

[node name="Separate" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("4_xypln")

[node name="Merge" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("5_k3q55")

[node name="Reticle" type="Sprite2D" parent="Player"]
z_index = 1
texture = ExtResource("3_qajak")
hframes = 12
vframes = 2
frame = 14

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/Reticle"]
libraries = {
"": SubResource("AnimationLibrary_a2tbn")
}

[node name="BuffNode" type="Node2D" parent="Player"]
script = ExtResource("7_btp5n")

[node name="Enemy_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="HUD" parent="." instance=ExtResource("6_uy1jr")]

[connection signal="timeout" from="Player/Alchemy_timer" to="Player" method="_on_alchemy_timer_timeout"]
[connection signal="timeout" from="Player/Alchemy_windup" to="Player" method="_on_alchemy_windup_timeout"]
[connection signal="timeout" from="Enemy_timer" to="." method="_on_enemy_timer_timeout"]
